--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flexidetector
 description: IDLE / BREAK Detector
 version: 0.0.1
-homepage:
+homepage: https://github.com/prabhuc94/flexidetector
 
 environment:
   sdk: '>=3.1.0 <4.0.0'
